UnitedDeployment supports toleration config in subset (#214)
* UnitedDeployment supports toleration config in subset

* fix code format
